--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/shipping_info_list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/shipping_info_list.html
@@ -38,8 +38,8 @@ $(function(){
 					return '<input type="radio" name="chk" class="custom-ui"><label></label>';
 				}
 			},		
-			{data: "VSBED", title: "[[#{DCP_L_SHIPPING_CONDITION}]]"},//Shipping Condition
-			{data: "VSBED_TX", title: "[[#{DCP_L_DESCRIPTION}]]"}//Description
+			{data: "VSBED", title: "[[#{HQPD_L_SHIPPING_CONDITION}]]"},//Shipping Condition
+			{data: "VSBED_TX", title: "[[#{HQPD_L_DESCRIPTION}]]"}//Description
 		],
 		ajax: {
 			url: "/portal/scm/parts/domestic/order/create/shipping_info_list/data",
