--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/top.html
@@ -40,14 +40,14 @@
 		<ul class="info-list">
 			<li class="username" sec:authentication="name"></li>
 			<li>|</li>
-			<li class="openNewWindow" th:text="#{DCP_T_NEW_WINDOW}"></li>
+			<li class="openNewWindow" th:text="#{PTL_T_NEW_WINDOW}"></li>
 			<li>|</li>
-			<li class="dealerInfo" th:text="#{DCP_T_DEALER_INFO}"></li>
+			<li class="dealerInfo" th:text="#{PTL_T_DEALER_INFO}"></li>
 			<li>|</li>		
-			<li class="tooltip"><span th:text="#{DCP_T_LAST_LOGIN_INFO}"></span><span id="lastLoginTime" class="tooltiptext"></span></li>
+			<li class="tooltip"><span th:text="#{PTL_T_LAST_LOGIN_INFO}"></span><span id="lastLoginTime" class="tooltiptext"></span></li>
 		</ul>
 		<div class="split"></div>
-		<button class="logout-button" th:text="#{DCP_B_LOGOUT}"></button>
+		<button class="logout-button" th:text="#{PTL_B_LOGOUT}"></button>
 	</div>
 </div>
 
