--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/parts_info.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/parts_info.html
@@ -15,9 +15,9 @@
 </style>
 
 <div class="block-header">
-	<div class="block-title" th:text="#{DCP_T_PARTS_INFO}"></div><!-- Parts Info. -->
+	<div class="block-title" th:text="#{HQPD_T_PARTS_INFO}"></div><!-- Parts Info. -->
 	<div class="block-button-area">
-		<button id="BTN_search" type="button" th:text="#{DCP_B_SEARCH}"></button><!-- Search -->		
+		<button id="BTN_search" type="button" th:text="#{HQPD_B_SEARCH}"></button><!-- Search -->		
 	</div>	
 </div>	
 <div class="condition-area">
@@ -25,7 +25,7 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:15%" th:text="#{DCP_L_PARTS_NO}"></th><!-- Part No. -->
+			<th style="width:15%" th:text="#{HQPD_L_PARTS_NO}"></th><!-- Part No. -->
 			<td colspan="3">
 				<div class="input-area">
 					<input type="text" id="pPartsNo" name="pPartsNo" class="custom-ui-btn" style="text-transform: uppercase;">
@@ -42,15 +42,15 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:15%" th:text="#{DCP_L_DESCRIPTION}"></th><!-- Description -->
+			<th style="width:15%" th:text="#{HQPD_L_DESCRIPTION}"></th><!-- Description -->
 			<td id="MAKTX"></td>
-			<th style="width:15%" th:text="#{DCP_L_STOCK}"></th><!-- Stock -->
+			<th style="width:15%" th:text="#{HQPD_L_STOCK}"></th><!-- Stock -->
 			<td id="AVA_FLAG"></td>			
 		</tr>		
 		<tr>
-			<th th:text="#{DCP_L_SERVICEABLE}"></th><!-- Serviceable -->
+			<th th:text="#{HQPD_L_SERVICEABLE}"></th><!-- Serviceable -->
 			<td id="SVRCD"></td>
-			<th th:text="#{DCP_L_NOT_SERVICE_REASON}"></th><!-- Not Service Reason -->
+			<th th:text="#{HQPD_L_NOT_SERVICE_REASON}"></th><!-- Not Service Reason -->
 			<td>
 				<span id="NOT_SERVICE"></span>
 				
@@ -60,9 +60,9 @@
 			</td>
 		</tr>		
 		<tr>
-			<th th:text="#{DCP_L_SALES_LOT}"></th><!-- Sales Lot  -->
+			<th th:text="#{HQPD_L_SALES_LOT}"></th><!-- Sales Lot  -->
 			<td id="AUMNG"></td>
-			<th th:text="#{DCP_L_MODEL}"></th><!-- Model -->
+			<th th:text="#{HQPD_L_MODEL}"></th><!-- Model -->
 			<td>						
 				<div id="AREA_appliedModel" style="display:none;">			
 				<span id="M_MATNR" class="custom-ui"></span>
@@ -71,26 +71,26 @@
 			</td>			
 		</tr>			
 		<tr>
-			<th th:text="#{DCP_L_PRODUCT_HIERARCHY}"></th><!-- Product Hierarchy -->
+			<th th:text="#{HQPD_L_PRODUCT_HIERARCHY}"></th><!-- Product Hierarchy -->
 			<td id="PRODH_T"></td>
-			<th th:text="#{DCP_L_OPEN_QTY}"></th><!-- Open Qty -->
+			<th th:text="#{HQPD_L_OPEN_QTY}"></th><!-- Open Qty -->
 			<td id="KWMENG"></td>			
 		</tr>	
 		<tr>
-			<th th:text="#{DCP_L_NET_WEIGHT}"></th><!-- Net Weight -->
+			<th th:text="#{HQPD_L_NET_WEIGHT}"></th><!-- Net Weight -->
 			<td id="NTGEW"></td>
-			<th th:text="#{DCP_L_LIST_PRICE_COST_CODE}"></th><!-- List Price Cost Code  -->
+			<th th:text="#{HQPD_L_LIST_PRICE_COST_CODE}"></th><!-- List Price Cost Code  -->
 			<td id="KONDM"></td>			
 		</tr>
 		<tr>
-			<th th:text="#{DCP_L_SUPPLY_PARTS_NO}"></th><!-- Supply Parts No. -->
+			<th th:text="#{HQPD_L_SUPPLY_PARTS_NO}"></th><!-- Supply Parts No. -->
 			<td>				
 				<div id="AREA_subItem" style="display:none;">			
 				<span id="REPNR" class="custom-ui"></span>
 				<button id="BTN_subItem" class="btn-popup2" type="button" onclick="showMoreInfoPopup(this);"></button>
 				</div>
 			</td>
-			<th th:text="#{DCP_L_STOCK_OF_SUPPLY_PARTS}"></th><!-- Stock of Supply Parts -->
+			<th th:text="#{HQPD_L_STOCK_OF_SUPPLY_PARTS}"></th><!-- Stock of Supply Parts -->
 			<td id="STOCKP"></td>			
 		</tr>
 	</tbody>
@@ -101,13 +101,13 @@
 <table class="condition">
 	<thead>
 		<tr>
-			<th rowspan="2" th:text="#{DCP_L_LIST_PRICE}" style="width:15%"></th><!--List Price  -->
-			<th colspan="3" th:text="#{DCP_L_NET_PRICE}" style="width:85%"></th><!-- Net Price -->			
+			<th rowspan="2" th:text="#{HQPD_L_LIST_PRICE}" style="width:15%"></th><!--List Price  -->
+			<th colspan="3" th:text="#{HQPD_L_NET_PRICE}" style="width:85%"></th><!-- Net Price -->			
 		</tr>		
         <tr>
-            <th th:text="#{DCP_L_STOCK_ORDER}"></th><!-- Stock Order -->
-            <th th:text="#{DCP_L_MACHINE_DOWN_ORDER}"></th><!-- Machine Down Order -->
-            <th th:text="#{DCP_L_EMERGENCY_ORDER}"></th><!--Emergency Order  -->                        
+            <th th:text="#{HQPD_L_STOCK_ORDER}"></th><!-- Stock Order -->
+            <th th:text="#{HQPD_L_MACHINE_DOWN_ORDER}"></th><!-- Machine Down Order -->
+            <th th:text="#{HQPD_L_EMERGENCY_ORDER}"></th><!--Emergency Order  -->                        
         </tr>
      </thead>
      <tbody>
@@ -129,7 +129,7 @@ function doSearch()
 {
 	if (JpUtilsString.isEmpty($("#pPartsNo").val()))
 	{
-		alert("[[#{DCP_M_EMPTY_PARTS_NO}]]");
+		alert("[[#{HQPD_M_EMPTY_PARTS_NO}]]");
 		return;
 	}	
 	
@@ -149,7 +149,7 @@ function doSearch()
 	    	
 	    	if (items.length == 0)
 	    	{
-	    		alert("[[#{DCP_M_EMPTY_RESULT}]]");
+	    		alert("[[#{HQPD_M_EMPTY_RESULT}]]");
 	    		document.location.reload();
 	    	};	    	
 	    	
