--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/error_report.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/error_report.html
@@ -6,9 +6,9 @@
 
 <th:block layout:fragment="content">
 	<div class="block-header">
-		<div class="block-title" th:text="#{DCP_T_SIMULATION_ERROR REPORT}"></div>
+		<div class="block-title" th:text="#{HQPD_T_SIMULATION_ERROR REPORT}"></div>
 		<div class="block-button-area">
-			<button id="BTN_download" type="button">[[#{DCP_B_DOWNLOAD}]]</button>
+			<button id="BTN_download" type="button">[[#{HQPD_B_DOWNLOAD}]]</button>
 		</div>		
 	</div>
 	
@@ -24,10 +24,10 @@
 			scrollY: 100,
 			fixedColumns: { leftColumns: 1 },// 컬럼 고정 켬. (왼쪽 2개 컬럼 고정)
 			columns : [
-				{name: "materialNo", data: "materialNo", title: "[[#{DCP_L_ORDER_PART_NO}]]"},//Parts No.
+				{name: "materialNo", data: "materialNo", title: "[[#{HQPD_L_ORDER_PART_NO}]]"},//Parts No.
 				{
 					name: "nonExist",
-					title: "[[#{DCP_L_SIMULATION_ERROR_NOT_EXIST}]]",
+					title: "[[#{HQPD_L_SIMULATION_ERROR_NOT_EXIST}]]",
 					render: function(data, type, row)
 					{
 						if (row.errorType == "NON_EXIST")
@@ -40,7 +40,7 @@
 				},
 				{
 					name: "wrongDivision",
-					title: "[[#{DCP_L_SIMULATION_ERROR_WRONG_DIVISION}]]",
+					title: "[[#{HQPD_L_SIMULATION_ERROR_WRONG_DIVISION}]]",
 					render: function(data, type, row)
 					{
 						if (row.errorType == "WRONG_DIVISION")
@@ -53,7 +53,7 @@
 				},			
 				{
 					name: "nonPurchase",
-					title: "[[#{DCP_L_SIMULATION_ERROR_NOT_SERVICEABLE}]]",
+					title: "[[#{HQPD_L_SIMULATION_ERROR_NOT_SERVICEABLE}]]",
 					render: function(data, type, row)
 					{
 						if (row.errorType == "NON_PURCHASE")
@@ -64,8 +64,8 @@
 						return "";
 					}
 				},				
-				{name: "errorCode", data: "errorCode", title: "[[#{DCP_L_SIMULATION_ERROR_CODE}]]"},//Error Code
-				{name: "errorMessage", data: "errorMessage", title: "[[#{DCP_L_SIMULATION_ERROR_MSG}]]"}//Text	
+				{name: "errorCode", data: "errorCode", title: "[[#{HQPD_L_SIMULATION_ERROR_CODE}]]"},//Error Code
+				{name: "errorMessage", data: "errorMessage", title: "[[#{HQPD_L_SIMULATION_ERROR_MSG}]]"}//Text	
 			],
 			data: opener.errorOrderItems,
 			drawCallback: function(settings)
