--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/ship_to_party_list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/ship_to_party_list.html
@@ -6,9 +6,9 @@
 
 <th:block layout:fragment="content">
 	<div class="block-header">
-		<div class="block-title" th:text="#{DCP_T_SHIP_TO_PARTY}"></div>
+		<div class="block-title" th:text="#{HQPD_T_SHIP_TO_PARTY}"></div>
 		<div class="block-button-area">
-			<button id="BTN_search" th:text="#{DCP_B_SEARCH}"></button>
+			<button id="BTN_search" th:text="#{HQPD_B_SEARCH}"></button>
 		</div>
 	</div>
 	
@@ -17,13 +17,13 @@
 	<table class="condition">
 		<tbody>
 			<tr>
-				<th th:text="#{DCP_L_DEALER_CODE}"></th>
+				<th th:text="#{HQPD_L_DEALER_CODE}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pCustomerNo" name="pCustomerNo" class="custom-ui">
 					</div>
 				</td>
-				<th th:text="#{DCP_L_DEALER_NAME}"></th>
+				<th th:text="#{HQPD_L_DEALER_NAME}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pCustomerName" name="pCustomerName" class="custom-ui">
@@ -63,10 +63,10 @@ $(function(){
 					return '<input type="radio" name="chk" class="custom-ui"><label></label>';
 				}
 			},		
-			{data: "KUNN2", title: "[[#{DCP_L_DEALER_CODE}]]"},//Dealer Code
-			{data: "NAME1", title: "[[#{DCP_L_DEALER_NAME}]]"},//Dealer Name
-			{data: "ORT01", title: "[[#{DCP_L_ADDRESS}]]"},//Address
-			{data: "VTEXT", title: "[[#{DCP_L_TRANSPORTATION_ZONE}]]"}//Transportation Zone
+			{data: "KUNN2", title: "[[#{HQPD_L_DEALER_CODE}]]"},//Dealer Code
+			{data: "NAME1", title: "[[#{HQPD_L_DEALER_NAME}]]"},//Dealer Name
+			{data: "ORT01", title: "[[#{HQPD_L_ADDRESS}]]"},//Address
+			{data: "VTEXT", title: "[[#{HQPD_L_TRANSPORTATION_ZONE}]]"}//Transportation Zone
 		],
 		ajax: {
 			url: "/portal/scm/parts/domestic/order/create/ship_to_party_list/data",
